syntax = "proto3";
package pb;
option go_package = "src/internal/infra/grpc/pb";

enum DbStatusEnum {
    UNINITIALIZATED = 0;
    INDEX_CREATED = 1;
    DB_CREATED = 2;
}

message DropDbRequest {}

message DropDbResponse {}

message DbStatusRequest {}

message DbStatusResponse {
    DbStatusEnum status = 1;
    int32 indexCount = 2;
}

message PopulateIndexRequest {
    int32 maxItems = 1;
}
    
message PopulateIndexResponse{ 
    int32 indexCount = 1;
}

message PopulateDbRequest {
    int32 concurrency = 1;
    int32 timeout = 2;
}

message PartialTime {
    int32	dbread = 1;
    int32	getapi = 2;
    int32	getpage = 3;
    int32	scanpage = 4;
    int32	dbwrite = 5;
}

message DeputadoResponse { 
    bool    error = 1;
    string  errorString = 2;
    int32   id = 3;
    string  name = 4;
    int32   milliseconds = 5;
    PartialTime partialTime = 6;
}

message CancelPopulateDbRequest {}
message CancelPopulateDbResponse {}


service DbService {
    rpc DropDb(DropDbRequest) returns (DropDbResponse) {}
    rpc DbStatus(DbStatusRequest) returns (DbStatusResponse) {}
    rpc PopulateIndex(PopulateIndexRequest) returns (PopulateIndexResponse) {}
    rpc PopulateDb(PopulateDbRequest) returns (stream DeputadoResponse) {}
    rpc CancelPopulateDb(CancelPopulateDbRequest) returns (CancelPopulateDbResponse) {}
}

